--- a/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
+++ b/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
                                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="QMq-s7-z1m"/>
                                                                 <constraint firstAttribute="height" constant="35" id="wKa-S9-sfe"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="19"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -138,7 +138,7 @@
                                                                         <constraint firstAttribute="width" constant="120" id="Az2-ZE-rOX"/>
                                                                         <constraint firstAttribute="height" constant="21" id="hBk-jQ-Ygn"/>
                                                                     </constraints>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -159,7 +159,7 @@
                                                                         <constraint firstAttribute="width" constant="120" id="6jZ-xq-cUk"/>
                                                                         <constraint firstAttribute="height" constant="21" id="rKd-VX-Kvl"/>
                                                                     </constraints>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -223,11 +223,11 @@
             </objects>
             <point key="canvasLocation" x="245.59999999999999" y="-567.61619190404804"/>
         </scene>
-        <!--Price-->
+        <!--Rate-->
         <scene sceneID="VFy-9j-Jzb">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QW9-oD-XNB" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Price" id="uWp-bi-tVI">
+                    <tabBarItem key="tabBarItem" title="Rate" id="uWp-bi-tVI">
                         <color key="badgeColor" name="keyboardFocusIndicatorColor" catalog="System" colorSpace="catalog"/>
                     </tabBarItem>
                     <toolbarItems/>
