--- a/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
+++ b/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
@@ -61,9 +61,6 @@
                         <viewLayoutGuide key="safeArea" id="Ip2-dC-iYs"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="uWp-bi-tVI"/>
-                    <connections>
-                        <segue destination="lGE-gw-jw7" kind="show" id="AYk-vO-eI2"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bxj-Y6-OJy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -114,6 +111,7 @@
                             <constraint firstItem="6jq-bu-87j" firstAttribute="top" secondItem="t2I-qJ-KVL" secondAttribute="top" constant="30" id="kpY-FP-y0S"/>
                             <constraint firstAttribute="trailing" secondItem="6jq-bu-87j" secondAttribute="trailing" constant="30" id="oTb-zL-7Q8"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="iHl-ts-Jj0"/>
                     </view>
                 </viewController>
             </objects>
@@ -122,50 +120,17 @@
         <!--View Controller-->
         <scene sceneID="rbf-LQ-53R">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bKy-m2-dY8" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="Obs-RZ-e9j" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BaD-Vc-OZK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="418"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.32549019610000002" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <viewLayoutGuide key="safeArea" id="F19-D1-Tn2"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bKy-m2-dY8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-143" y="-410"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="17E-Hu-fWZ">
-            <objects>
-                <viewController id="sL3-RB-Cv1" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5J6-0Z-dqM">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="NIN-76-P1B"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="wiI-wT-3la"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="myo-R1-P50" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="626" y="-1299"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="g8a-ah-op4">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lGE-gw-jw7" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1uR-Yn-nCy">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="sL3-RB-Cv1" kind="relationship" relationship="rootViewController" id="2nq-dC-3xU"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="imz-pU-em7" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-143" y="-1299"/>
         </scene>
     </scenes>
 </document>
