--- a/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
+++ b/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
@@ -139,13 +139,13 @@
                                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="U4i-pw-Paa">
                                                                             <rect key="frame" x="106.5" y="0.0" width="76.5" height="46"/>
                                                                             <subviews>
-                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="SELL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LbI-Ve-GQG">
+                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SELL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LbI-Ve-GQG">
                                                                                     <rect key="frame" x="23" y="0.0" width="31" height="19.5"/>
                                                                                     <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
                                                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
-                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="10,053.23" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuO-nE-ziW">
+                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="10,053.23" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuO-nE-ziW">
                                                                                     <rect key="frame" x="0.5" y="24.5" width="76" height="21.5"/>
                                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                     <nil key="textColor"/>
@@ -160,7 +160,7 @@
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD ($)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jbz-wy-Dc1">
                                                             <rect key="frame" x="16" y="22" width="100" height="35"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="100" id="QMq-s7-z1m"/>
+                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="QMq-s7-z1m"/>
                                                                 <constraint firstAttribute="height" constant="35" id="wKa-S9-sfe"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="19"/>
@@ -176,6 +176,11 @@
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <connections>
+                                                    <outlet property="buyPrice" destination="xXd-2a-ccf" id="sO5-bE-wBE"/>
+                                                    <outlet property="currencyLabel" destination="jbz-wy-Dc1" id="jah-5Y-C2J"/>
+                                                    <outlet property="sellPrice" destination="yuO-nE-ziW" id="gBG-7T-zU5"/>
+                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
                                         <connections>
